Throw exception upon trying to play invalid worklet animations

Currently we are printing out a console message upon trying to play an
invalid worklet animation, e.g. no-keyframe effect. Rather, an exception
should be thrown.

Note that regular animations accept effects without any keyframes, but
it currently does not make much sense in our implementation of worklet
animation.

It's a little bit strict to throw ATM, but once our implementation is
able to support it we can remove this exception.

Bug: 882939
Change-Id: Ia63b67b70adeb132f5df2c8679935551ec3ac1d7
Reviewed-on: https://chromium-review.googlesource.com/1225091
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Commit-Queue: Yi Gu <yigu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592921}
Former-commit-id: f1310529d2e7817d7696bb8cac0c52935751d60c